--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -32,26 +32,26 @@ jobs:
           echo $PAT_TOKEN | gh auth login --with-token
 
       - name: Set up node
-        if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE')}}
+        if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
           cache: 'npm'
       - name: Install node_modules
-        if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE')}}
+        if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
         run: |
           npm ci
 
 
       # - name: Regenerate mockServiceWorker.js
-      #   if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE')}}
+      #   if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
       #   run: |
       #     git config pull.rebase false
       #     git pull origin ${{ github.event.pull_request.head.ref }} --allow-unrelated-histories
       #     git checkout ${{ github.event.pull_request.head.ref }}
       #     npx msw init public/ --save
       # - name: Check for changes in mockServiceWorker.js
-      #   if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE')}}
+      #   if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
       #   run: |
       #     if [[ $(git status --porcelain) ]]; then
       #       git status --porcelain
@@ -62,7 +62,7 @@ jobs:
       #       echo "No changes in mockServiceWorker.js"
       #     fi
       # - name: Change title of PR
-      #   if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE')}}
+      #   if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
       #   env:
       #     GH_TOKEN: ${{ secrets.PAT_TOKEN }}
       #   run: |
