--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -74,7 +74,7 @@ jobs:
 
 
       - name: Regenerate mockServiceWorker.js
-        if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+        if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
         run: |
           git status --porcelain
           git config pull.rebase false
@@ -93,7 +93,7 @@ jobs:
           
           npx msw init public/ --save
       - name: Check for changes in mockServiceWorker.js
-        if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+        if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
         run: |
           if [[ $(git status --porcelain) ]]; then
             git status --porcelain
@@ -106,12 +106,12 @@ jobs:
           fi
 
       - name: Push new branch
-        if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+        if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
         run: |
           git push --force-with-lease origin MSW-1
 
       - name: Create new pull request
-        if: ${{contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+        if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
         env:
           GH_TOKEN: ${{ secrets.PAT_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
