--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -66,7 +66,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-          PR_NUMBER=$(gh pr list --head "dependabot/npm_and_yarn/msw-2.6.5" --json number -q '.[0].number')
+          PR_NUMBER=$(gh pr list --head ${{ github.event.pull_request.head.ref }} --json number -q '.[0].number')
           CURRENT_TITLE=$(gh pr view "$PR_NUMBER" --json title -q '.title')
           NEW_TITLE="MSW_UPDATE: $CURRENT_TITLE"
           gh pr edit "$PR_NUMBER" --title "$NEW_TITLE"
