--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -55,7 +55,7 @@ jobs:
         run: |
           if [[ $(git status --porcelain) ]]; then
             git status --porcelain
-            git add public/mockServiceWorker.js
+            git .
             git commit --no-verify -m "[dependabot skip] Automatically updatiing mockServiceWorker.js file after 'msw' update in package.json"
             git push origin ${{ github.event.pull_request.head.ref }}
           else
