--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -2,9 +2,8 @@ name: msw
 
 on:  
   pull_request:
-    types: [opened, synchronize]
     branches:
-      - master
+      - dependabot/**
 
 permissions:
   contents: write
@@ -12,10 +11,10 @@ permissions:
 
 env:
   GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-  # GIT_AUTHOR_NAME: ${{ github.actor }}
-  # GIT_AUTHOR_EMAIL: ${{ github.actor }}@users.noreply.github.com
-  # GIT_COMMITTER_NAME: GitHub
-  # GIT_COMMITTER_EMAIL: actions@github.com
+  GIT_AUTHOR_NAME: ${{ github.actor }}
+  GIT_AUTHOR_EMAIL: ${{ github.actor }}@users.noreply.github.com
+  GIT_COMMITTER_NAME: GitHub
+  GIT_COMMITTER_EMAIL: actions@github.com
   # BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
   #BRANCH_NAME: msw-update-${{ github.run_id }}
 
@@ -24,6 +23,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}     
 
       - name: Authenticate with PAT
         env:
@@ -40,21 +41,24 @@ jobs:
       - name: Install node_modules
         if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
         run: |
-          npm ci
+          npm i
+          echo "--------------"
+          git status
+          echo "--------------"
 
 
       - name: Regenerate mockServiceWorker.js
         if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
         run: |
-          git config --global user.name "ireactman"
-          gin config --global user.email "ireactman@gmail.com"
+          # git config --global user.name "ireactman"
+          # gin config --global user.email "ireactman@gmail.com"
 
-          git fetch origin
-          git checkout -f master
+          # git fetch origin
+          # git checkout -f master
 
-          git checkout -b ROM-999
+          # git checkout -b ROM-999
 
-          npm run b
+          # npm run b
           npx msw init public/ --save
 
       - name: Check for changes in mockServiceWorker.js
@@ -64,27 +68,27 @@ jobs:
             git status --porcelain
             git .
             git commit --no-verify -m "[dependabot skip] Automatically updatiing mockServiceWorker.js file after 'msw' update in package.json"
-            git push origin ROM-999
+            git push
           else
             echo "No changes in mockServiceWorker.js"
           fi
-      # - name: Change title of PR
-      #   if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
-      #   env:
-      #     GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-      #   run: |
-      #     PR_NUMBER=$(gh pr list --head ROM-999 --json number -q '.[0].number')
-      #     CURRENT_TITLE=$(gh pr view "$PR_NUMBER" --json title -q '.title')
-      #     NEW_TITLE="MSW_UPDATE: $CURRENT_TITLE"
-      #     gh pr edit "$PR_NUMBER" --title "$NEW_TITLE"
-
-      - name: Create new pull request
+      - name: Change title of PR
         if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
         env:
           GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh pr create --base master --head ROM-999 --title 'MSW update' --body 'Created via CI/CD'
+          PR_NUMBER=$(gh pr list --head ROM-999 --json number -q '.[0].number')
+          CURRENT_TITLE=$(gh pr view "$PR_NUMBER" --json title -q '.title')
+          NEW_TITLE="MSW_UPDATE: $CURRENT_TITLE"
+          gh pr edit "$PR_NUMBER" --title "$NEW_TITLE"
+
+      # - name: Create new pull request
+      #   if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
+      #   env:
+      #     GH_TOKEN: ${{ secrets.PAT_TOKEN }}
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   run: |
+      #     gh pr create --base master --head ROM-999 --title 'MSW update' --body 'Created via CI/CD'
 
 
 
