--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -26,10 +26,8 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}     
 
       - name: Authenticate with PAT
-        env:
-          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-          echo $PAT_TOKEN | gh auth login --with-token
+          echo "${{ secrets.PAT_TOKEN }}" | gh auth login --with-token
 
       - name: Set up node
         if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
