--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,11 +5,11 @@ on:
     branches:
       - 'master'
 
-  workflow_run:
-    workflows:
-      - msw
-    types:
-      - completed
+  # workflow_run:
+  #   workflows:
+  #     - msw
+  #   types:
+  #     - completed
 
 
 permissions: write-all    
