--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Create new PR for msw bump
         if: ${{ env.PR_URL != '' }}
         run: |
-          gh pr checkout "${PR_URL}" --branch dependabot/msw-bump
+          gh pr checkout "${PR_URL}"
           git checkout -b new-msw-bump
           git push origin new-msw-bump
           gh pr create --title "chore: bump msw to latest version" \
