--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
           gh pr checkout "${PR_URL}"
           git checkout -b new-msw-bump
+          npx msw init public/ --save
           git push origin new-msw-bump
           gh pr create --title "chore: bump msw to latest version" \
                        --body "This PR is based on the Dependabot bump for the MSW library." \
