--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -10,10 +10,10 @@ permissions:
 
 env:
   GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-  GIT_AUTHOR_NAME: ${{ github.actor }}
-  GIT_AUTHOR_EMAIL: ${{ github.actor }}@users.noreply.github.com
-  GIT_COMMITTER_NAME: GitHub
-  GIT_COMMITTER_EMAIL: actions@github.com
+  # GIT_AUTHOR_NAME: ${{ github.actor }}
+  # GIT_AUTHOR_EMAIL: ${{ github.actor }}@users.noreply.github.com
+  # GIT_COMMITTER_NAME: GitHub
+  # GIT_COMMITTER_EMAIL: actions@github.com
   # BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
   #BRANCH_NAME: msw-update-${{ github.run_id }}
 
@@ -22,111 +22,50 @@ jobs:
     if: ${{ github.actor == 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.pull_request.head.ref }}     
+      - name: Dependabot metadata
+        id: dependabot-metadata
+        uses: dependabot/fetch-metadata@v2
 
-      - name: Authenticate with PAT
-        run: |
-          echo "$GH_TOKEN" | gh auth login --with-token
+      - uses: actions/checkout@v4 
+
+      # - name: Authenticate with PAT
+      #   run: |
+      #     echo "$GH_TOKEN" | gh auth login --with-token
 
       - name: Set up node
-        if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
+        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
         uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
           cache: 'npm'
+
       - name: Install node_modules
-        if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
+        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+        run: npm ci
+      
+      - name: Find Dependabot PR for msw
+        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
+        id: find_pr
         run: |
-          npm i
-          echo "--------------"
-          git status
-          echo "--------------"
+          # PR_ID=$(gh pr list ${{ github.event.pull_request.head.ref }} --json url --jq ".[0].url")
+          PR_ID=$(gh pr list ${{ github.event.pull_request.head.ref }} --json id --jq ".[0].id")
+          echo "PR_ID=${PR_ID}" >> $GITHUB_ENV
 
-
-      - name: Regenerate mockServiceWorker.js
-        if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
+      - name: Create new PR for msw bump
+        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
         run: |
-          git config pull.rebase false
-          git pull origin ${{ github.event.pull_request.head.ref }} --allow-unrelated-histories
-          git checkout ${{ github.event.pull_request.head.ref }}
+          gh pr checkout "${PR_ID}"
+          git checkout -b new-msw-bump
           npx msw init public/ --save
+          git add .
+          git push origin new-msw-bump
+          gh pr create \
+            --title "Bump msw to latest version" \
+            --body "This PR is based on the Dependabot bump for the MSW library with updates in mockServiceWorker.js file" \
+            --base master \
+            --head new-msw-bump
 
-      - name: Check for changes in mockServiceWorker.js
-        if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Close msw bump from Dependabot
+        if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
         run: |
-          if [[ $(git status --porcelain) ]]; then
-            git status --porcelain
-            git add .
-            git commit --no-verify -m "[dependabot skip] Automatically updatiing mockServiceWorker.js file after 'msw' update in package.json"
-            git push origin 
-          else
-            echo "No changes in mockServiceWorker.js"
-          fi
-      # - name: Change title of PR
-      #   if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
-      #   env:
-      #     GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-      #   run: |
-      #     PR_NUMBER=$(gh pr list --head ROM-999 --json number -q '.[0].number')
-      #     CURRENT_TITLE=$(gh pr view "$PR_NUMBER" --json title -q '.title')
-      #     NEW_TITLE="MSW_UPDATE: $CURRENT_TITLE"
-      #     gh pr edit "$PR_NUMBER" --title "$NEW_TITLE"
-
-      # - name: Create new pull request
-      #   if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
-      #   env:
-      #     GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   run: |
-      #     gh pr create --base master --head ROM-999 --title 'MSW update' --body 'Created via CI/CD'
-
-#222
-
-      # - name: Regenerate mockServiceWorker.js
-      #   if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
-      #   run: |
-      #     git status --porcelain
-      #     git config pull.rebase false
-      #     git pull origin master --allow-unrelated-histories
-          
-      #     git status --porcelain
-      #     git branch -r
-
-      #     git checkout master
-      #     git checkout -b MSW-1
-
-      #     git stash
-      #     npm i -D msw@latest
-
-      #     echo "Current branch is: $(git rev-parse --abbrev-ref HEAD)"
-          
-      #     npx msw init public/ --save
-      # - name: Check for changes in mockServiceWorker.js
-      #   if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
-      #   run: |
-      #     if [[ $(git status --porcelain) ]]; then
-      #       git status --porcelain
-
-      #       git add .
-      #       git commit -m "ROM - blabla"
-
-      #     else
-      #       echo "No changes in mockServiceWorker.js"
-      #     fi
-
-      # - name: Push new branch
-      #   if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
-      #   run: |
-      #     git push --force-with-lease origin MSW-1
-
-      # - name: Create new pull request
-      #   if: ${{!contains(github.event.pull_request.title, 'MSW_UPDATE') && contains(github.event.pull_request.title, 'msw')}}
-      #   env:
-      #     GH_TOKEN: ${{ secrets.PAT_TOKEN }}
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   run: |
-      #     gh pr create --base master --head MSW-1 --title 'MSW update' --body 'Created via CI/CD'
+          gh pr remove "${PR_ID}"
