--- a/.github/workflows/mytest.yml
+++ b/.github/workflows/mytest.yml
@@ -6,6 +6,10 @@ on:
 env:
   GH_TOKEN: ${{ secrets.PAT_TOKEN }}
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   check_dependabot_bump:
     runs-on: ubuntu-latest
@@ -55,6 +59,8 @@ jobs:
           echo "----------4"
           git add .
           git push origin new-msw-bump
-          gh pr create --title "chore: bump msw to latest version" \
-                       --body "This PR is based on the Dependabot bump for the MSW library." \
-                       --base master --head new-msw-bump
+          gh pr create \
+            --title "chore: bump msw to latest version" \
+            --body "This PR is based on the Dependabot bump for the MSW library." \
+            --base master \
+            --head new-msw-bump
