--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -47,7 +47,7 @@ jobs:
         if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
         id: find_pr
         run: |
-          # PR_ID=$(gh pr list ${{ github.event.pull_request.head.ref }} --json url --jq ".[0].url")
+          # PR_ID=$(gh pr list --head ${{ github.event.pull_request.head.ref }} --json url --jq ".[0].url")
           PR_ID=$(gh pr list ${{ github.event.pull_request.head.ref }} --json id --jq ".[0].id")
           echo "PR_ID=${PR_ID}" >> $GITHUB_ENV
 
