--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -45,7 +45,8 @@ jobs:
       
       - name: Find Dependabot PR for msw
         if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
-        id: find_pr
+        env:
+          GH_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           # PR_ID=$(gh pr list --head ${{ github.event.pull_request.head.ref }} --json url --jq ".[0].url")
           PR_URL=$(gh pr list --search "dependabot update msw" --json url --jq ".[0].url")
