--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -28,9 +28,10 @@ jobs:
 
       - uses: actions/checkout@v4 
 
-      # - name: Authenticate with PAT
-      #   run: |
-      #     echo "$GH_TOKEN" | gh auth login --with-token
+      - name: Authenticate with PAT
+        run: |
+          echo ${{ secrets.PAT_TOKEN }} | gh auth login --with-token
+          # echo "$GH_TOKEN" | gh auth login --with-token
 
       - name: Set up node
         if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
