--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -52,7 +52,7 @@ jobs:
           # PR_ID=$(gh pr list --head ${{ github.event.pull_request.head.ref }} --json url --jq ".[0].url")
           PR_URL=$(gh pr list --search "dependabot update msw" --json url --jq ".[0].url")
           # PR_ID=$(gh pr list ${{ github.event.pull_request.head.ref }} --json id --jq ".[0].id")
-          echo "PR_ID=${PR_ID}" >> $GITHUB_ENV
+          echo "PR_URL=${PR_URL}" >> $GITHUB_ENV
 
       - name: Create new PR for msw bump
         if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
