--- a/.github/workflows/msw.yml
+++ b/.github/workflows/msw.yml
@@ -71,4 +71,4 @@ jobs:
       - name: Close msw bump from Dependabot
         if: ${{ contains(steps.dependabot-metadata.outputs.dependency-names, 'msw') }}
         run: |
-          gh pr remove "${PR_URL}"
+          gh pr close "${PR_URL}"
